# Rag_Lab

./: .gitignore  README.md  app.py  pyproject.toml
src/: base.py
src/bots/: hybrid_rag.py  simple_rag.py
